# sportifycu

./: .gitignore  README.md  main.py  pubspec.yaml  pyproject.toml  sportify_db.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
backend/: README.md  auth.py  config.py  crud.py  database.py  database_example.py  dependencies.py  main.py  models.py  schemas.py  utils.py
backend/database_data/: README.md  __init__.py  add_group_activity_team.py  add_gym.py  add_user.py
backend/routers/: activity_teams_router.py  ai_coach_router.py  auth_router.py  gyms_router.py  leaderboard_router.py  teams_router.py  users_router.py
backend/services/: ai_coach_service.py  email_service.py  gcloud_service.py
backend/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_api.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/api/: ai_coach_api.dart  auth_api.dart  group_activity_api.dart  gym_api.dart  leaderboard_api.dart  user_api.dart
lib/models/: app_notification.dart  chat_message.dart  group_activity_team.dart  gym.dart  leaderboard_entry.dart  user.dart
lib/providers/: auth_provider.dart  chat_provider.dart  group_activity_provider.dart  gym_provider.dart  leaderboard_provider.dart  notification_provider.dart  theme_provider.dart
lib/utils/: app_colors.dart  constants.dart  dummy_data.dart  web_location.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+105 files in other folders)
