[project]
name = "sportifycu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "fastapi-mail>=1.5.0",
    "fuzzywuzzy>=0.18.0",
    "google-api-python-client>=2.171.0",
    "google-auth>=2.40.2",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.5",
    "pyotp>=2.9.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-levenshtein>=0.27.1",
    "python-multipart>=0.0.20",
    "tinydb>=4.8.2",
]
